--- a/wykop_api/pubspec.yaml
+++ b/wykop_api/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  equatable: ^1.1.0
+  http: ^0.12.0+4
+  shared_preferences: ^0.5.6+3
   flutter:
     sdk: flutter
 
